package EjerciciosIteractivos_Modulo;

public class EjercicioCompletar extends Ejercicio {
    public EjercicioCompletar(String enunciado) {
        super(enunciado);
    }
}
