@startuml
'https://plantuml.com/class-diagram


class Leccion {
 - listaEjercicios : Ejercicio
}


abstract class Ejercicio{
    - dificultad : NivelDificultad
    - respuestasCorrectas : Respuesta
}

class EjercicioSeleccion{

}
class EjercicioCompletar{

}


enum NivelDificultad {
    PRINCIPIANTE
    BASICO
    INTERMEDIO
    AVANZADO
    EXPERTO

    +getDescripcion(): String

}

Contenido o--> Leccion
Leccion *--> Ejercicio
EjercicioCompletar --u|> Ejercicio
EjercicioSeleccion --u|> Ejercicio
Ejercicio --> NivelDificultad

@enduml